--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ form input{
 
 form button{
     height: 3rem;
-    background-color: #af4d98;
+    background-color: #e706b2;
     color: #fff;
     font-size: 1.15rem;
     cursor: pointer;
